@@ -1,5 +1,14 @@
 2011-01-10  Stefan Kost  <ensonic@users.sf.net>
 
+	* src/bmltest_info.h:
+	  Filter newlines in command output.
+
+	* tests/testmachine.sh:
+	  Improve report: lowercase dlls (takes less space), print extra
+	  commands.
+
+2011-01-10  Stefan Kost  <ensonic@users.sf.net>
+
 	* TODO:
 	* dllwrapper/wine/win32.c:
 	  Improve faking our indentity. Fixes cheapo spread :).
